--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/react": "^3.3.1",
     "@astrojs/sitemap": "^3.1.2",
     "@astrojs/starlight": "^0.21.5",
     "@astrojs/starlight-tailwind": "^2.0.2",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.5.3",
-    "astro": "^4.6.1",
+    "astro": "^4.7.0",
     "astro-compressor": "^0.4.1",
     "globby": "^14.0.1",
     "gsap": "^3.12.5",
     "html-minifier": "^4.0.0",
     "nodemailer": "^6.9.13",
     "preline": "^2.1.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "sharp": "^0.33.3",
     "sharp-ico": "^0.1.5",
     "tailwindcss": "^3.4.3"
