--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/vercel": "^7.5.3",
     "astro": "^4.7.0",
     "astro-compressor": "^0.4.1",
+    "express": "^4.19.2",
     "globby": "^14.0.1",
     "gsap": "^3.12.5",
     "html-minifier": "^4.0.0",
