--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.2",
+    "@astrojs/check": "^0.9.3",
     "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/starlight": "^0.25.4",
+    "@astrojs/starlight": "^0.26.1",
     "@astrojs/starlight-tailwind": "^2.0.3",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.7.2",
@@ -22,13 +22,15 @@
     "@preline/overlay": "^2.4.1",
     "@preline/tabs": "^2.4.1",
     "@vercel/nft": "^0.27.3",
-    "astro": "^4.13.3",
+    "astro": "^4.14.2",
     "astro-compressor": "^0.4.1",
     "clipboard": "^2.0.11",
+    "glob": "^11.0.0",
     "globby": "^14.0.2",
     "gsap": "^3.12.5",
     "html-minifier-terser": "^7.2.0",
     "lenis": "^1.1.9",
+    "lru-cache": "^11.0.0",
     "preline": "^2.4.1",
     "rimraf": "^6.0.1",
     "sharp": "^0.33.4",
