--- a/package.json
+++ b/package.json
@@ -10,34 +10,37 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/mdx": "^3.1.3",
-    "@astrojs/react": "^3.6.2",
+    "@astrojs/check": "^0.9.2",
     "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/starlight": "^0.26.1",
+    "@astrojs/starlight": "^0.25.4",
     "@astrojs/starlight-tailwind": "^2.0.3",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.7.2",
-    "astro": "^4.14.2",
+    "@preline/accordion": "^2.4.1",
+    "@preline/collapse": "^2.4.1",
+    "@preline/dropdown": "^2.4.1",
+    "@preline/overlay": "^2.4.1",
+    "@preline/tabs": "^2.4.1",
+    "@vercel/nft": "^0.27.3",
+    "astro": "^4.13.3",
     "astro-compressor": "^0.4.1",
-    "express": "^4.19.2",
-    "globby": "^14.0.1",
+    "clipboard": "^2.0.11",
+    "globby": "^14.0.2",
     "gsap": "^3.12.5",
-    "html-minifier": "^4.0.0",
-    "nodemailer": "^6.9.14",
-    "preline": "^2.1.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "sharp": "^0.33.3",
+    "html-minifier-terser": "^7.2.0",
+    "lenis": "^1.1.9",
+    "preline": "^2.4.1",
+    "rimraf": "^6.0.1",
+    "sharp": "^0.33.4",
     "sharp-ico": "^0.1.5",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.9"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
-    "astro-vtbot": "^1.7.9",
-    "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.13",
-    "typescript": "^5.4.5"
+    "astro-vtbot": "^1.8.4",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "typescript": "^5.5.4"
   }
 }
